<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">


    <TextView
        android:id="@+id/tv_clock_in"
        style="@style/style_font_black"
        android:drawableStart="@drawable/svg_work_clock_in"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/sign_in_video" />

    <TextView
        style="@style/style_font_black"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/day_card"
        android:textSize="@dimen/sp_20" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_sign_in" />

        <TextView
            style="@style/style_font_white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/body_temperature_today_hint"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <TextView
            style="@style/style_font_black"
            android:text="@string/body_temperature_today" />

        <com.sunny.zy.widget.edittext.ClearEditText
            android:id="@+id/et_temperature"
            style="@style/style_font_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/style_common_btn"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="0dp"
        android:text="@string/sign_in_now" />

</LinearLayout>